--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -8,7 +8,9 @@
     "ghcr.io/devcontainers/features/python:1": {
       "version": "3.12"
     },
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {
+          "moby": false
+    },
     "ghcr.io/devcontainers-extra/features/aws-cdk:2.0.16": {},
     "ghcr.io/anthropics/devcontainer-features/claude-code:1.0": {},
     "ghcr.io/devcontainers/features/github-cli:1": {}
