ci: install Tesseract and Leptonica dependencies for golangci-lint
Add system dependencies (libtesseract-dev, libleptonica-dev, tesseract-ocr)
to CI workflow to fix compilation errors with gosseract package

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,11 @@ jobs:
           go-version: '1.24.1'
           cache: false
 
+      - name: Install System Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libtesseract-dev libleptonica-dev tesseract-ocr
+
       - name: Install Go Dependencies
         run: |
           go mod tidy
